force-app/main/default/objects/ChannelAdmin_Approval_Routing__c/ChannelAdmin_Approval_Routing__c.object-meta.xml
<CustomObject>
    <description>Country based Routing Rules for Jetson Deal Registration (SDS-2474)</description>
    <label>ChannelAdmin Approval Routing</label>
    <nameField>
        <label>Country Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChannelAdmin Approval Routings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>