force-app/main/default/objects/ChannelAdmin_Approval_Routing__c/fields/CountryCodeStateCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeStateCode__c</fullName>
    <description>It helps in sorting logic used in the Flow to get the owner based on country and state</description>
    <formula>Name  &amp;  StateCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountryCodeStateCode</label>
    <type>Text</type>
</CustomField>