force-app/main/default/objects/ChannelAdmin_Approval_Routing__c/fields/EduLead_Approver__c.field-meta.xml
<CustomField>
    <fullName>EduLead_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-3055</description>
    <label>EduLead Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChannelAdmin_Approval_Routings1</relationshipName>
    <type>Lookup</type>
</CustomField>