force-app/main/default/objects/ChannelAdmin_Approval_Routing__c/fields/IsChannelAdminActiveInternalUser__c.field-meta.xml
<CustomField>
    <fullName>IsChannelAdminActiveInternalUser__c</fullName>
    <description>Is the Channel Admin active and internal user in SFDC?</description>
    <formula>IF(   
	AND(
		Jetson_Approver__r.IsActive,  
		ISPICKVAL(Jetson_Approver__r.UserType, &apos;Standard&apos;)
	), True, False
)</formula>
    <inlineHelpText>Is the Channel Admin active and internal user in SFDC?</inlineHelpText>
    <label>IsChannelAdminActiveInternalUser</label>
    <type>Checkbox</type>
</CustomField>