force-app/main/default/objects/ChannelAdmin_Approval_Routing__c/fields/IsEduLeadApproverActive__c.field-meta.xml
<CustomField>
    <fullName>IsEduLeadApproverActive__c</fullName>
    <formula>IF(
AND(
EduLead_Approver__r.IsActive,
ISPICKVAL(EduLead_Approver__r.UserType, &apos;Standard&apos;)
), True, False
)</formula>
    <label>IsEduLeadApproverActive</label>
    <type>Checkbox</type>
</CustomField>