force-app/main/default/objects/ChannelAdmin_Approval_Routing__c/fields/Jetson_Approver__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jetson Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChannelAdmin_Approval_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>