force-app/main/default/objects/ChannelAdmin_Approval_Routing__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <description>SDS-2900 - Jetson Reg Approval Routing to include State</description>
    <inlineHelpText>2 letter ISO state code. Countries that does not support state - keep blank</inlineHelpText>
    <label>StateCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>