force-app/main/default/objects/ChannelAdmin_Approval_Routing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StateCode__c</columns>
    <columns>Jetson_Approver__c</columns>
    <columns>IsChannelAdminActiveInternalUser__c</columns>
    <columns>EduLead_Approver__c</columns>
    <columns>IsEduLeadApproverActive__c</columns>
    <columns>CountryCodeStateCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>